--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 .crx_mouse_visited {
   background-clip: #bcd5eb !important;
-  outline: 1px dashed #e9af6e !important;
+  outline: 2px dashed #1d4044 !important;
   cursor: pointer !important;
 }
 
