--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,7 @@
+#miner-extension-window {
+  position: relative;
+  z-index: 999999999999999;
+}
 .crx_mouse_visited {
   background-clip: #bcd5eb !important;
   outline: 2px dashed #1d4044 !important;
@@ -5,5 +9,240 @@
 }
 
 .miner-zoom-btn {
-  border-radius: 100%;
+  appearance: none;
+  backdrop-filter: none;
+  backface-visibility: visible;
+  background-color: rgb(129, 230, 217);
+  block-size: 40px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-inline-end-color: rgba(255, 255, 255, 0.16);
+  border-inline-end-style: solid;
+  border-inline-end-width: 0px;
+  border-inline-start-color: rgba(255, 255, 255, 0.16);
+  border-inline-start-style: solid;
+  border-inline-start-width: 0px;
+  border-left-color: rgba(255, 255, 255, 0.16);
+  border-left-style: solid;
+  border-left-width: 0px;
+  border-right-color: rgba(255, 255, 255, 0.16);
+  border-right-style: solid;
+  border-right-width: 0px;
+  border-top-color: rgba(255, 255, 255, 0.16);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-top-style: solid;
+  border-top-width: 0px;
+  bottom: 0px;
+  box-shadow: none;
+  box-sizing: border-box;
+  break-after: auto;
+  break-before: auto;
+  break-inside: auto;
+  buffered-rendering: auto;
+  caption-side: top;
+  caret-color: rgb(26, 32, 44);
+  clear: none;
+  clip: auto;
+  clip-path: none;
+  clip-rule: nonzero;
+  color: rgb(26, 32, 44);
+  color-interpolation: srgb;
+  color-interpolation-filters: linearrgb;
+  color-rendering: auto;
+  column-count: auto;
+  column-gap: normal;
+  column-rule-color: rgb(26, 32, 44);
+  column-rule-style: none;
+  column-rule-width: 0px;
+  column-span: none;
+  column-width: auto;
+  content: normal;
+  cursor: pointer;
+  cx: 0px;
+  cy: 0px;
+  d: none;
+  direction: ltr;
+  display: flex;
+  dominant-baseline: auto;
+  empty-cells: show;
+  fill: rgb(0, 0, 0);
+  fill-opacity: 1;
+  fill-rule: nonzero;
+  filter: none;
+  flex-basis: auto;
+  flex-direction: row;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-wrap: nowrap;
+  float: none;
+  flood-color: rgb(0, 0, 0);
+  flood-opacity: 1;
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-kerning: auto;
+  font-optical-sizing: auto;
+  font-size: 16px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-weight: 600;
+  grid-auto-columns: auto;
+  grid-auto-flow: row;
+  grid-auto-rows: auto;
+  grid-column-end: auto;
+  grid-column-start: auto;
+  grid-row-end: auto;
+  grid-row-start: auto;
+  grid-template-areas: none;
+  grid-template-columns: none;
+  grid-template-rows: none;
+  height: 40px;
+  hyphens: manual;
+  image-orientation: from-image;
+  image-rendering: auto;
+  inline-size: 82.9219px;
+  inset-block-end: 0px;
+  inset-block-start: 0px;
+  inset-inline-end: 0px;
+  inset-inline-start: 0px;
+  isolation: auto;
+  justify-content: center;
+  justify-items: normal;
+  justify-self: auto;
+  left: 0px;
+  letter-spacing: normal;
+  lighting-color: rgb(255, 255, 255);
+  line-break: auto;
+  line-height: 19.2px;
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: disc;
+  margin-block-end: 0px;
+  margin-block-start: 0px;
+  margin-bottom: 0px;
+  margin-inline-end: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  marker-end: none;
+  marker-mid: none;
+  marker-start: none;
+  mask-type: luminance;
+  max-block-size: none;
+  max-height: none;
+  max-inline-size: none;
+  max-width: none;
+  min-block-size: auto;
+  min-height: auto;
+  min-inline-size: 40px;
+  min-width: 40px;
+  mix-blend-mode: normal;
+  object-fit: fill;
+  object-position: 50% 50%;
+  offset-distance: 0px;
+  offset-path: none;
+  offset-rotate: auto 0deg;
+  opacity: 1;
+  order: 0;
+  orphans: 2;
+  outline-color: rgb(26, 32, 44);
+  outline-offset: 0px;
+  outline-style: none;
+  outline-width: 0px;
+  overflow-anchor: auto;
+  overflow-wrap: break-word;
+  overflow-x: visible;
+  overflow-y: visible;
+  overscroll-behavior-block: auto;
+  overscroll-behavior-inline: auto;
+  padding-block-end: 0px;
+  padding-block-start: 0px;
+  padding-bottom: 0px;
+  padding-inline-end: 16px;
+  padding-inline-start: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 0px;
+  paint-order: normal;
+  perspective: none;
+  perspective-origin: 41.4531px 20px;
+  pointer-events: auto;
+  position: relative;
+  r: 0px;
+  resize: none;
+  right: 0px;
+  row-gap: normal;
+  ruby-position: over;
+  rx: auto;
+  ry: auto;
+  scroll-behavior: auto;
+  scroll-margin-block-end: 0px;
+  scroll-margin-block-start: 0px;
+  scroll-margin-inline-end: 0px;
+  scroll-margin-inline-start: 0px;
+  scroll-padding-block-end: auto;
+  scroll-padding-block-start: auto;
+  scroll-padding-inline-end: auto;
+  scroll-padding-inline-start: auto;
+  shape-image-threshold: 0;
+  shape-margin: 0px;
+  shape-outside: none;
+  shape-rendering: auto;
+  speak: normal;
+  stop-color: rgb(0, 0, 0);
+  stop-opacity: 1;
+  stroke: none;
+  stroke-dasharray: none;
+  stroke-dashoffset: 0px;
+  stroke-linecap: butt;
+  stroke-linejoin: miter;
+  stroke-miterlimit: 4;
+  stroke-opacity: 1;
+  stroke-width: 1px;
+  tab-size: 8;
+  table-layout: auto;
+  text-align: center;
+  text-align-last: auto;
+  text-anchor: start;
+  text-decoration: none solid rgb(26, 32, 44);
+  text-decoration-color: rgb(26, 32, 44);
+  text-decoration-line: none;
+  text-decoration-skip-ink: auto;
+  text-decoration-style: solid;
+  text-indent: 0px;
+  text-overflow: clip;
+  text-rendering: auto;
+  text-shadow: none;
+  text-size-adjust: 100%;
+  text-transform: none;
+  text-underline-position: auto;
+  top: 0px;
+  touch-action: auto;
+  transform: none;
+  transform-origin: 41.4609px 20px;
+  transform-style: flat;
+  transition-delay: 0s;
+  transition-duration: 0.25s;
+  transition-property: all;
+  transition-timing-function: ease;
+  unicode-bidi: normal;
+  user-select: none;
+  vector-effect: none;
+  vertical-align: middle;
+  visibility: visible;
+  white-space: nowrap;
+  widows: 2;
+  width: 82.9219px;
+  will-change: auto;
+  word-break: normal;
+  word-spacing: 0px;
+  writing-mode: horizontal-tb;
+  x: 0px;
+  y: 0px;
+  z-index: auto;
+  zoom: 1;
 }
